--- a/Final-website/Photography.html
+++ b/Final-website/Photography.html
@@ -12,7 +12,7 @@
 </style>
 <body>
     <!--=========Photography=================-->
-    <a href="main.html"><button>Back</button></a>
+    <a href="index.html"><button>Back</button></a>
      <h1  id="Photography">Photography</h1>
      
     <div class="container">
