--- a/Final-website/UI-design.html
+++ b/Final-website/UI-design.html
@@ -11,7 +11,7 @@
   
 </style>
 <body>
-    <a href="main.html"><button>Back</button></a>
+    <a href="index.html"><button>Back</button></a>
    <h1 id="UI/UX-design">UI/UX Design</h1>
   <div class="container">
           <img src="UX design/image1.png" alt=""  data-aos="fade-left" data-aos-offset="100"  data-aos-duration="1000" data-aos-delay="50">
