--- a/Final-website/web design.html
+++ b/Final-website/web design.html
@@ -12,7 +12,7 @@
 </style>
 <body>
 <!--=========Web design=================-->
-    <a href="main.html"><button>Back</button></a>
+    <a href="index.html"><button>Back</button></a>
     <h1 id="web-Design">Web Design</h1>
    <div class="container">
            <img src="web design/sign up.png" alt=""  data-aos="fade-left" data-aos-offset="100"  data-aos-duration="1000" data-aos-delay="50">
